Generic descriptions for unknown transfers (#59)
